# verilink-aiverify-plugin

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SPECIFICATION.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yml  test.yml
examples/: quick_start.py
tests/: conftest.py  mock_server.py  test_full_integration.py  test_plugin.py
verilink_plugin/: __init__.py  client.py  exceptions.py  models.py  plugin.py  utils.py
