[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "verilink-aiverify-plugin"
version = "1.0.0"
description = "VeriLinkOS Active Governance Integration for AI Verify"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
dependencies = [
    "httpx>=0.23.0,<0.28.0",
    "pydantic>=1.10.0,<3.0.0",
    "python-dotenv>=0.19.0,<2.1.0",
    "tenacity>=8.0.0,<9.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py39"
